# app-mvp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: Api.cpp  Api.h  App.cpp  App.h  Info.plist.in  Stt.cpp  Stt.h  WindowProtection.h  WindowProtection.mm  main.cpp
src-ts/: .prettierrc.json  index.html  package-lock.json  package.json  vite.config.ts
src-ts/public/: audioProcessor.js
src-ts/src/: App.tsx
src-ts/src/hooks/: useMicRecorder.ts
